--- a/style.css
+++ b/style.css
@@ -106,3 +106,32 @@ header nav ul li a {
 }
 
 /****** slut menu *****/
+
+/****** start splash *****/
+
+#splash {
+    width: 100%;
+    height: 100vh;
+    background-image: url(assets/billede.png);
+
+    background-position: 25% 0%;
+}
+
+
+
+/* mobil */
+@media only screen and (min-width: 401px) {
+    #splash {
+        background-position: 50% 0%;
+    }
+}
+
+/* web */
+@media only screen and (min-width: 992px) {
+    #splash {
+        background-position: 50% 0%;
+    }
+
+}
+
+/****** slut splash *****/
