--- a/style.css
+++ b/style.css
@@ -416,14 +416,16 @@ img {
 }
 
 /*video*/
-/*#play-pause {
+#play-pause {
     color: red;
     background-color: black;
     border-radius: 40px;
-    height: 50px;
+    height: 40px;
     width: 100px;
     text-transform: uppercase;
     text-shadow: 2px 2.1px 3px #d04f20;
+    margin-left: 5rem;
+
 
 
 }
@@ -433,10 +435,11 @@ img {
     color: red;
     background-color: black;
     border-radius: 40px;
-    height: 50px;
+    height: 40px;
     width: 100px;
     text-transform: uppercase;
     text-shadow: 2px 2.1px 3px #d04f20;
+    margin-left: 5rem;
 }
 
 
@@ -445,13 +448,15 @@ img {
     color: red;
     background-color: black;
     border-radius: 40px;
-    height: 50px;
+    height: 40px;
     width: 100px;
     text-transform: uppercase;
     text-shadow: 2px 2.1px 3px #d04f20;
+    margin-left: 5rem;
+
 
 }
-*/
+
 
 .item {
     display: inline-block;
@@ -468,6 +473,11 @@ img {
 
 .item img {
     max-width: 100%;
+}
+
+#responsivt-video,
+video {
+    width: 100%;
 }
 
 
