--- a/style.css
+++ b/style.css
@@ -50,6 +50,7 @@ header nav ul li a {
     text-decoration: none;
     display: block;
     font-size: 2rem;
+    font-family: 'Raleway', sans-serif;
 
 
 }
@@ -205,7 +206,7 @@ header nav ul li a {
 #about .wrapper {
     display: flex;
     flex-wrap: wrap;
-    background-color: rgba(255, 255, 255, 0.8);
+    background-color: #ffffff;
     margin: 0 20px;
     letter-spacing: 1px;
     max-width: 1200px;
@@ -233,7 +234,7 @@ header nav ul li a {
 }
 
 #afarve {
-    background-color: #ed6351;
+    background-color: #F2D1C2;
 }
 
 
@@ -294,17 +295,21 @@ h1 {
     font-family: sans-serif;
     font-weight: bold;
     text-transform: uppercase;
-    background-color: #ffbf80;
-    color: black;
+    background-color: #F58E81;
+    color: #000000;
+    font-family: 'Raleway', sans-serif;
+
 }
 
 h2 {
-    color: black;
-    font-size: 2rem;
+    color: #000000;
+    font-size: 2.5rem;
+    color: #000000;
+    font-weight: bold;
 }
 
 h3 {
-    color: #f5934b;
+    color: #000000;
     font-size: 2rem;
 }
 
@@ -312,6 +317,9 @@ p {
     font-size: 2rem;
     color: black;
     margin-bottom: 1.5rem;
+
+
+
 }
 
 ul {
@@ -340,13 +348,13 @@ footer {
     max-width: 1200px;
     margin: 0 auto;
     border: 1px solid #bc7b7b;
-    background-color: #020202;
+    background-color: floralwhite;
 
 
 }
 
 .sectionwrapper {
-    background-color: #fff6d8;
+    background-color: floralwhite;
     padding: 0 2rem;
 }
 
