--- a/style.css
+++ b/style.css
@@ -112,7 +112,7 @@ header nav ul li a {
 #splash {
     width: 100%;
     height: 100vh;
-    background-image: url(assets/billede.png);
+    background-image: url(assets/baggrundtest.png);
 
     background-position: 25% 0%;
 }
